--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.2",
+    "@heroicons/react": "^2.2.0",
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.9.1",
     "lucide-react": "^0.503.0",
