--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
     "autoprefixer": "^10.4.21",
+    "eslint-plugin-react-dom": "^1.49.0",
+    "eslint-plugin-react-x": "^1.49.0",
     "framer-motion": "^12.9.1",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router": "^7.5.2",
+    "react-router-dom": "^7.5.2",
     "recharts": "^2.15.3"
   },
   "devDependencies": {
