--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
   "dependencies": {
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
+    "@types/axios": "^0.14.4",
     "autoprefixer": "^10.4.21",
+    "axios": "^1.9.0",
     "framer-motion": "^12.9.1",
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.2",
-
     "react-router": "^7.5.2",
-
-    "recharts": "^2.15.3"
+    "react-router-dom": "^7.5.2",
+    "recharts": "^2.15.3",
+    "recoil": "^0.7.7",
+    "zod": "^3.25.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
