--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3",
     "recoil": "^0.7.7",
+    "recoil-persist": "^5.1.0",
     "xlsx": "^0.18.5",
     "zod": "^3.25.17"
   },
